responsive home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Satisfy", sans-serif;
+  font-family: italic;
 }
 
 /*--------------------------------------------------------------
@@ -461,7 +461,6 @@ h1, h2, h3, h4, h5, h6 {
     width: 5%;
   }
 }
-
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
@@ -1394,4 +1393,8 @@ section {
 }
 #footer .credits {
   font-size: 13px;
+}
+.responsive {
+  width: 100%;
+  height: auto;
 }
