--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1395,6 +1395,9 @@ section {
   font-size: 13px;
 }
 .responsive {
-  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100%;
+  width: 100%;
 }
