--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1395,9 +1395,8 @@ section {
   font-size: 13px;
 }
 .responsive {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
 }
