--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,66 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   max-height: 40px;
 }
+#banner{
+  background: linear-gradient(rgba(0,0,0,0.5),#6f2f7f) ,url(../img/home1.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+.logo{
+  width: 140px;
+  position: absolute;
+  top: 4%;
+  left: 10%;
+}
+.banner-text{
+  text-align: center;
+  color: white;
+  padding-top: 180px;
+
+}
+.banner-text h1{
+  font-size: 40px;
+  font-family: 'Kaushan Script', cursive
+
+}
+.banner-text p{
+  font-size: 16px;
+  font-style: italic;
+}
+.banner-btn{
+  margin: 70px auto 0;
+}
+
+.banner-btn a{
+  width: 150px;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0 10px;
+  padding: 12px 0;
+  color: #fff;
+  border: .5px solid #fff;
+  position: relative;
+  z-index: 1;
+  transition: color 0.5s;
+}
+.banner-btn a span{
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background:#fff;
+  z-index: -1;
+  transition: 0.5s;
+
+}
+.banner-btn a:hover span{
+  width:100%;
+}
+.banner-btn a:hover{
+  color:#000;
+}
 
 /*--------------------------------------------------------------
 # Book a table button Menu
