--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ h1, h2, h3, h4, h5, h6 {
   max-height: 40px;
 }
 #banner{
-  background: linear-gradient(rgba(0,0,0,0.5),#6f2f7f) ,url(../img/home1.jpg);
+  background: linear-gradient(rgba(0,0,0,0.5),#6f2f7f) ,url(../img/home.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
